welcome.lessons.welcome.bdr.BDR.scala.code
while (estSurMessage()) {
  if (litMessage()=="R") {
    droite()
  }  
   if (litMessage()=="L") {
     gauche()
   }
     
   if (litMessage()=="I") {
     droite()
  	 droite()
  	 avance()
   }
    if (litMessage()=="A") {
      avance()
   }
  	if (litMessage()=="B") {
      avance()
      avance()
    }
     if (litMessage()=="C") {
       avance()
       avance()
       avance()
    }
  	 if (LitMessage()=="Z") {
       recule()
     }
     if (LitMessage()=="Y") {
       recule()
       recule()
     }
  	 if (LitMessage()=="X") {
       recule()
       recule()
       recule()
     }
}
